# arw_lightroom

./: .gitignore  README.md  main.py  pyproject.toml
app/: lut_manager.py  pipeline.py  preset_manager.py  processors.py  server.py
luts/: Cinematic Teal & Orange.cube  Warm Vintage.cube  custom-lut-seed-7727-samples-62-495f60cd.cube
presets/: 01 - Default Reset.json  02 - Vibrant Portrait.json  03 - Cinematic Teal & Orange.json  04 - High Contrast Mono.json  05 - Warm Vintage Matte.json  base.json
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: test_pipeline.py
