[project]
name = "arw-lightroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "numpy>=2.4.6",
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "rawpy>=0.27.0",
    "scipy>=1.17.1",
    "uvicorn>=0.49.0",
]
